fix horizontal scroll

--- a/styles/style.css
+++ b/styles/style.css
@@ -40,7 +40,6 @@ ol {
 }
 
 .content {
-  margin: auto;
   display: grid;
   align-items: end;
   gap: 30px;
@@ -51,28 +50,28 @@ ol {
 /* Левый блок */
 
 .result__video-container {
+  inline-size: 711px;
   block-size: 386px;
-  width: 100%;
-  height: 100%;
-  margin: 0 0 16px;
+  margin-block-end: 16px;
 }
 
 .result__video {
+  inline-size: 100%;
+  block-size: 100%;
   object-fit: cover;
   object-position: center;
-  height: 100%;
-  width: 100%;
 }
 
 .search-form {
   display: flex;
-  align-items: flex-start;
   justify-content: space-between;
+  align-items: flex-start;
 }
 
 .search-form__fieldset {
   display: flex;
   flex-direction: column;
+  gap: 5px;
   border: none;
 }
 
@@ -95,16 +94,16 @@ ol {
   appearance: none;
   background: transparent;
   border: none;
-  border-top: 1px solid #fff;
-  border-bottom: 1px solid #fff;
+  border-block-start: 1px solid #fff;
+  border-block-end: 1px solid #fff;
   color: rgb(255 255 255 / 0.7);
   font-family: 'Fira Sans Condensed', Arial, sans-serif;
   font-size: 18px;
   font-style: normal;
   font-weight: 400;
   line-height: normal;
-  min-width: 225px;
-  max-width: 225px;
+  min-inline-size: 225px;
+  max-inline-size: 225px;
 }
 
 .search-form__checkbox-list {
@@ -116,18 +115,9 @@ ol {
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 19px;
-  height: 19px;
+  inline-size: 19px;
+  block-size: 19px;
   border: 1px solid #fff;
-  margin: 0 5px 0 0;
-}
-
-.search-form__label-text {
-  color: #fff;
-  font-size: 18px;
-  font-style: normal;
-  font-weight: 400;
-  line-height: normal;
 }
 
 .button {
@@ -140,9 +130,8 @@ ol {
   font-style: normal;
   font-weight: 700;
   line-height: normal;
-  padding: 5px 0;
   cursor: pointer;
-  height: 34px;
+  block-size: 34px;
 }
 
 .button:focus {
@@ -150,7 +139,16 @@ ol {
 }
 
 .search-form__submit-button {
-  min-width: 194px;
+  min-inline-size: 194px;
+  align-self: flex-end;
+}
+
+.search-form__label-text:active {
+	text-decoration: none;
+  }
+
+.search-form__textfield:focus {
+outline: none;
 }
 
 .search-form__label:hover .search-form__label-text,
@@ -158,14 +156,6 @@ ol {
 .content__card-link:hover {
   text-decoration: underline;
   cursor: pointer;
-}
-
-.search-form__label-text:active {
-  text-decoration: none;
-}
-
-.search-form__textfield:focus {
-  outline: none;
 }
 
 .search-form__textfield:hover {
@@ -189,7 +179,8 @@ ol {
   outline: none;
 }
 
-/* По макету под кнопкой после нажатия нет подчёркивания */
+/* По макету под кнопкой при нажатии нет подчёркивания */
+
 .button:active,
 .content__list-item:active {
   background: #545050;
@@ -209,11 +200,11 @@ ol {
   grid-area: content__details;
   display: flex;
   flex-direction: column;
+  block-size: 100%;
   gap: 26px;
 }
 
 .title {
-  /* margin: 10px 0 21px; */
   font-family: Oswald, Arial, sans-serif;
   font-size: 75px;
   font-weight: 700;
@@ -226,16 +217,17 @@ ol {
 }
 
 .content__list {
-  height: 298px;
+  max-inline-size: 399px;
+  block-size: 298px;
   overflow-y: auto;
 }
 
 .content__list-item {
-  margin: 0 0 30px;
+  margin-block-end: 30px;
 }
 
 .content__card-link {
-  display: flex;
+  display: block;
   color: #fff;
   text-decoration: none;
 }
@@ -250,13 +242,24 @@ ol {
 
 .content__video-card {
   display: flex;
-  padding: 2px;
-  gap: 6px;
+  align-items: flex-start;
 }
 
 .content__video-card-description-container {
-  width: 200px;
+  flex-grow: 1;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
 }
+
+.content__video-card-title {
+	font-family: Oswald, Arial, sans-serif;
+	font-size: 30px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 1;
+	text-transform: uppercase;
+  }
 
 .content__video-card-description {
   font-size: 18px;
@@ -264,19 +267,12 @@ ol {
   line-height: .9;
 }
 
-.content__video-card-title {
-  font-family: Oswald, Arial, sans-serif;
-  font-size: 30px;
-  font-weight: 700;
-  line-height: 1.;
-  text-transform: uppercase;
-}
-
 .content__video-card-thumbnail {
   width: 194px;
   height: 103px;
   object-fit: cover;
   object-position: center;
+  display: block;
 }
 
 .result__video-container,
@@ -285,7 +281,7 @@ ol {
 }
 
 .more-button {
-  min-width: 396px;
+  min-inline-size: 389px;
   margin: 2px;
 }
 
